fixed padding on mobile for buttons

--- a/styles/state.css
+++ b/styles/state.css
@@ -68,8 +68,7 @@ input[type=number] {
   .display-on-mobile{
     display: flex;
     justify-content: space-between;
-    
-    padding: 15vh 0;
+    padding: 5vh 0;
   }
   
 }
